--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mihajlo's portfolio</title>
+    <title>Mihajlo's Portfolio</title>
     <meta name="keywords" content="home, welcome page, website, portfolio, photography">
     <meta name="description" content="Photography portfolio website">
     <link rel="stylesheet" href="main.css">
